--- a/public/index.html
+++ b/public/index.html
@@ -4,51 +4,56 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>WhatsApp AI Chatbot</title>
-  <!-- Modern, minimal CSS framework for instant responsive design -->
-  <link rel="stylesheet" href="https://unpkg.com/@picocss/pico@2.0.6/css/pico.min.css">
+  <!-- Tailwind CSS CDN for utility-first styling -->
+  <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="/assets/app.css">
 </head>
 <body>
-  <header>
-    <h1>WhatsApp AI Chatbot</h1>
+  <header class="text-center mt-16 mb-10">
+    <h1 class="text-5xl font-extrabold text-blue-900 tracking-tight drop-shadow-lg animate-fade-in">WhatsApp AI Chatbot</h1>
+    <p class="mt-3 text-lg text-blue-700/80 font-medium animate-fade-in-slow">AI-powered WhatsApp assistant for your clinic, with live status and logs.</p>
   </header>
-  <main>
-    <div id="error-banner"></div>
-    <section id="status-section" class="card">
-      <div style="display:flex; align-items:center; justify-content: space-between; gap: .75rem; flex-wrap: wrap;">
-        <div id="status">Status: initializing...</div>
-        <div class="actions" style="display:flex; gap:.5rem;">
-          <button id="btn-reconnect" class="secondary" aria-label="Reconnect">Reconnect</button>
-          <button id="btn-reset-login" class="contrast" aria-label="Reset login">Reset login</button>
+  <main class="max-w-4xl mx-auto px-4 pb-12 bg-gradient-to-br from-blue-50 via-white to-blue-100 rounded-2xl shadow-xl">
+  <div id="error-banner" class="hidden transition-all duration-300 ease-in-out"></div>
+  <section id="status-section" class="card mb-8 p-8 bg-white/95 shadow-xl border border-blue-200 animate-fade-in">
+      <div class="flex flex-wrap items-center justify-between gap-6">
+        <div id="status" class="font-semibold text-blue-800 text-lg flex items-center gap-2">
+          <span class="inline-block w-3 h-3 rounded-full bg-green-400 animate-pulse" id="status-dot"></span>
+          <span>Status: initializing...</span>
+        </div>
+        <div class="actions flex gap-3">
+          <button id="btn-reconnect" class="secondary px-6 py-2.5 rounded-lg bg-blue-50 text-blue-800 border border-blue-300 hover:bg-blue-100 focus:ring-2 focus:ring-blue-300 transition shadow-sm" aria-label="Reconnect">Reconnect</button>
+          <button id="btn-reset-login" class="contrast px-6 py-2.5 rounded-lg bg-red-500 text-white border border-red-600 hover:bg-red-600 focus:ring-2 focus:ring-red-300 transition shadow-sm" aria-label="Reset login">Reset login</button>
         </div>
       </div>
     </section>
-    <section id="qr-section" class="card" style="display:none;">
-      <h2>Scan QR to connect</h2>
-      <img id="qr-img" alt="Scan QR code to connect" />
+    <section id="qr-section" class="card text-center mb-8 p-8 bg-white/95 shadow-xl border border-blue-200 animate-fade-in" style="display:none;">
+      <h2 class="text-2xl font-bold mb-4 text-blue-700">Scan QR to connect</h2>
+      <img id="qr-img" alt="Scan QR code to connect" class="mx-auto rounded-xl shadow-lg border-2 border-blue-200 bg-blue-50 p-4 transition hover:scale-105" />
+      <p class="mt-3 text-blue-700/80 text-base">Open WhatsApp and scan this code to log in.</p>
     </section>
-    <div class="flex-row">
-      <section id="stats" class="card flex-col">
-        <h3>Runtime stats</h3>
-        <table>
+  <div class="flex flex-col md:flex-row gap-10">
+      <section id="stats" class="card flex-1 min-w-[300px] p-8 bg-white/95 shadow-xl border border-blue-200 animate-fade-in">
+        <h3 class="text-2xl font-bold mb-8 text-blue-800 flex items-center gap-2"><svg class="w-6 h-6 text-blue-400" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M13 16h-1v-4h-1m1-4h.01M21 12c0 4.97-4.03 9-9 9s-9-4.03-9-9 4.03-9 9-9 9 4.03 9 9z"/></svg>Runtime stats</h3>
+        <table class="w-full text-base rounded-xl overflow-hidden">
           <tbody>
-            <tr><th>Connected clients</th><td id="stat-clients">0</td></tr>
-            <tr><th>Active conversations</th><td id="stat-conversations">0</td></tr>
-            <tr><th>Total appointments</th><td id="stat-appointments">0</td></tr>
-            <tr><th>Bot number</th><td id="stat-bot">-</td></tr>
-            <tr><th>Manual overrides</th><td id="stat-manual">0</td></tr>
-            <tr><th>Uptime (hh:mm:ss)</th><td id="stat-uptime">0</td></tr>
+            <tr class="rounded-lg hover:bg-blue-50/60 transition"><th class="text-left text-slate-500 font-medium py-2 pr-2">Connected clients</th><td id="stat-clients" class="text-right font-bold text-yellow-500">0</td></tr>
+            <tr class="rounded-lg hover:bg-blue-50/60 transition"><th class="text-left text-slate-500 font-medium py-2 pr-2">Active conversations</th><td id="stat-conversations" class="text-right font-bold text-blue-900">0</td></tr>
+            <tr class="rounded-lg hover:bg-blue-50/60 transition"><th class="text-left text-slate-500 font-medium py-2 pr-2">Total appointments</th><td id="stat-appointments" class="text-right font-bold text-green-600">0</td></tr>
+            <tr class="rounded-lg hover:bg-blue-50/60 transition"><th class="text-left text-slate-500 font-medium py-2 pr-2">Bot number</th><td id="stat-bot" class="text-right font-bold text-blue-600">-</td></tr>
+            <tr class="rounded-lg hover:bg-blue-50/60 transition"><th class="text-left text-slate-500 font-medium py-2 pr-2">Manual overrides</th><td id="stat-manual" class="text-right font-bold text-red-500">0</td></tr>
+            <tr class="rounded-lg hover:bg-blue-50/60 transition"><th class="text-left text-slate-500 font-medium py-2 pr-2">Uptime (hh:mm:ss)</th><td id="stat-uptime" class="text-right font-bold text-blue-900">0</td></tr>
           </tbody>
         </table>
       </section>
       <!-- Extensible placeholder for future widgets/components -->
-      <section id="extensible-widgets" class="card flex-col">
-        <h3>Widgets &amp; Extensions</h3>
+      <section id="extensible-widgets" class="card flex-1 min-w-[300px] p-8 bg-white/95 shadow-xl border border-blue-200 animate-fade-in">
+        <h3 class="text-2xl font-bold mb-8 text-blue-800 flex items-center gap-2"><svg class="w-6 h-6 text-blue-400" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M15 17h5l-1.405-1.405A2.032 2.032 0 0118 14.158V11a6.002 6.002 0 00-4-5.659V4a2 2 0 10-4 0v1.341C7.67 6.165 6 8.388 6 11v3.159c0 .538-.214 1.055-.595 1.436L4 17h5m6 0v1a3 3 0 11-6 0v-1m6 0H9"/></svg>Widgets &amp; Extensions</h3>
         <div class="widgets">
-          <div class="widget">
-            <h4>Live Logs</h4>
-            <div id="logs" style="max-height: 260px; overflow:auto; font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, 'Liberation Mono', 'Courier New', monospace; font-size: 12px; line-height: 1.35;">
-              <div style="color:#888;">Waiting for logs…</div>
+          <div class="widget bg-blue-50/60 border border-blue-200 rounded-xl p-5 shadow-md transition hover:shadow-lg">
+            <h4 class="font-semibold mb-2 text-blue-700">Live Logs</h4>
+            <div id="logs" class="max-h-64 overflow-auto font-mono text-xs leading-tight text-slate-600 bg-white/80 rounded p-2 border border-blue-100">
+              <div class="text-slate-400">Waiting for logs…</div>
             </div>
           </div>
         </div>
@@ -56,9 +61,17 @@
     </div>
     <!-- Future: Add more <section> blocks here for new features -->
   </main>
-  <footer>
-    <span>&copy; 2025 WhatsApp AI Bot &mdash; UI powered by <a href="https://picocss.com" target="_blank">Pico.css</a></span>
+  <footer class="text-center text-slate-500 mt-16 mb-6 text-base">
+    <span>&copy; 2025 WhatsApp AI Bot &mdash; UI powered by <a href="https://tailwindcss.com" target="_blank" class="underline text-blue-700 hover:text-blue-900">Tailwind CSS</a></span>
   </footer>
+  <style>
+    @keyframes fade-in {
+      from { opacity: 0; transform: translateY(16px); }
+      to { opacity: 1; transform: none; }
+    }
+    .animate-fade-in { animation: fade-in 0.7s cubic-bezier(.4,0,.2,1) both; }
+    .animate-fade-in-slow { animation: fade-in 1.2s cubic-bezier(.4,0,.2,1) both; }
+  </style>
   <script type="module" src="/assets/app.js"></script>
 </body>
 </html>
